<resources>
    <string name="app_name">LightTaskManager</string>
    <string name="tab_text_1">Список задач</string>
    <string name="tab_text_2">В процессе</string>
    <string name="tab_text_3">Сделано</string>
    <string name="sign_in">Войти</string>
    <string name="card_name">Task Name</string>
    <string name="task_id">ID1234</string>
    <string name="task_customer">Customer Name</string>
    <string name="task_performer">Performer</string>
    <string name="task_target_date">dd.mm.yyyy</string>
    <string name="task_name_hint">Task</string>
    <string name="customer_name_hint">Customer</string>
    <string name="performer_name_hint">Performer</string>
    <string name="target_date_hint">Date</string>
    <string name="task_description_hint">Description</string>
    <string name="address_hint">Address</string>
</resources>
